clang/test/BSC/Negative/OwnedStruct/destructor/owned_struct_in_struct/owned_struct_in_struct.cbs
// RUN: %clang_cc1 -verify %s

owned struct B {
};
struct A {
    B b;
};
void test(struct A a) {
} // expected-error {{field memory leak of value: `a`, a.b is leak}}

int main(){
    return 0;
}
